log
Thu 16 May 2024 09:18:24 PM UTC: 
 tests:  0|5
total_score: 0/70
1ebf4c5
Thu 16 May 2024 09:20:31 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
37447b4
Thu 16 May 2024 09:24:42 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
86657e5
Thu 16 May 2024 09:27:43 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1db649f
Thu 16 May 2024 09:30:07 PM UTC: 
 sudoku.c | 11 -----------
 1 file changed, 11 deletions(-)
 tests:  0|5
total_score: 0/70
7fdb575
Thu 16 May 2024 09:30:33 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|5
total_score: 0/70
20cfbba
Thu 16 May 2024 09:31:29 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:58:24: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   58 |           if(n->sudo[i][j] == 0){
      |              ~~~~~~~~~~^~~
sudoku.c:57:25: note: within this loop
   57 |        for(int j = 0; j < 10; j++){
      |                       ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
4763adc
Thu 16 May 2024 09:32:02 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
2df7844
Thu 16 May 2024 09:34:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4bf237b
Thu 16 May 2024 09:46:18 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
ddb142f
Thu 16 May 2024 09:47:09 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
ee846d1
Thu 16 May 2024 09:48:26 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
f013a83
Thu 16 May 2024 09:53:23 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  3|4
total_score: 20/70
6512218
Thu 16 May 2024 10:00:25 PM UTC: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:17: error: ‘k’ undeclared (first use in this function)
   71 |        int i=3*(k/3) + (p/3) ;
      |                 ^
sudoku.c:71:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:72:12: error: unused variable ‘j’ [-Werror=unused-variable]
   72 |        int j=3*(k%3) + (p%3) ;
      |            ^
sudoku.c:71:12: error: unused variable ‘i’ [-Werror=unused-variable]
   71 |        int i=3*(k/3) + (p/3) ;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
d65b8c3
Thu 16 May 2024 10:00:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:17: error: ‘k’ undeclared (first use in this function)
   71 |        int i=3*(k/3) + (p/3) ;
      |                 ^
sudoku.c:71:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:72:12: error: unused variable ‘j’ [-Werror=unused-variable]
   72 |        int j=3*(k%3) + (p%3) ;
      |            ^
sudoku.c:71:12: error: unused variable ‘i’ [-Werror=unused-variable]
   71 |        int i=3*(k/3) + (p/3) ;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
1b2d426
Thu 16 May 2024 10:02:02 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:17: error: ‘k’ undeclared (first use in this function)
   71 |        int i=3*(k/3) + (p/3) ;
      |                 ^
sudoku.c:71:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:72:12: error: unused variable ‘j’ [-Werror=unused-variable]
   72 |        int j=3*(k%3) + (p%3) ;
      |            ^
sudoku.c:71:12: error: unused variable ‘i’ [-Werror=unused-variable]
   71 |        int i=3*(k/3) + (p/3) ;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
7f762d0
